src/index.css
body {
  background-color: #9EBC9E !important;
}

.problem-details {
  text-align: center;
}

#board {
  top: 15px;
  position: relative;
  margin: 0 auto;
  border: 2px solid #424242;
  background-color: rgba(254, 154, 107, 0.4);
  margin-bottom: 35px;
}

.intersection {
  width: 40px;
  height: 40px;
  border-radius: 20px;
  position: absolute;
  box-sizing: border-box;
}

.intersection:before {
  border-top: 2px #000 solid;
  width: 40px;
  display: block;
  content: "";
  top: 18px;
  position: absolute;
  z-index: -1;
}

.intersection:after {
  border-left: 2px #000 solid;
  height: 40px;
  display: block;
  content: "";
  left: 18px;
  top: 0px;
  position: absolute;
  z-index: -1;
}

.intersection.black, .intersection.white {
  border: 1px solid #000;
}

.active-board:hover {
  background-color: rgba(126, 126, 126, 0.4);
}

.intersection.black {
  background-color: #333333;
}

.intersection.white {
  background-color: #eee;
}

.intersection.red {
  border: 1px solid #b90000;
  opacity: 30%;
}

.intersection.green {
  border: 1px solid #0b8300;
}

/* Home Page */

.home-page {
  height: 100vh;
  width: 100%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-page div button {
  display: block;
  margin: 15% auto;
}

